documentacao rota emitir relatorio
